# Jumpchain-Nexus

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  OPTIMIZE.md  README.md  assetMetadata.ts  node.cmd  npm.cmd  npx.cmd  package-lock.json  package.json  rewrite_randomizer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: desktop-ci.yml  desktop-tests.yml
DEV_NOTES/: 00_audit.md  00_feature-parity.md  01_mapping.md  02_inventory.md  05_overhaul-plan.md  06_template-guidelines.md  ACCEPTANCE.md  overhaul_tasks_batch2.md  perf-delta.md
apps/desktop/: .eslintrc.cjs  .gitignore  .npmignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts  wdio.conf.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  platformAdapter.ts  tauri.conf.json
apps/desktop/src-tauri/capabilities/: cosmic-locker-sql.json  cosmic-passport-sql.json  cosmic-warehouse-sql.json  default.json  devtools-shell.json  drawback-supplement-sql.json  export-tools.json  input-formatter-tools.json  jump-hub-sql.json  jump-options-sql.json  jump-randomizer-sql.json  knowledge-base-sql.json  statistics-sql.json  story-studio-sql.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
content/help/: Drawbacks.md  Gauntlets.md  Glossary.md  Origins.md  Perks.md  Scenarios.md  (+1 more)
(+143 files in other folders)
